# MRSD-Team-B

./: .gitignore  .gitmodules  Camera Trade Studies.xlsx  Gemfile  IMU Trade Studies.xlsx  README.md  _config.yml  brainstorming.html  calendar.html  fall-validation-test.html  files.html  goog-styles.css  index.html  media-gallery.html  performance-metrics.html  problem-description.html  project-updates.html  spring-validation-test.html  styles.css  styles.scss  subsystems.html  system-level-requirements.html  the-team.html  use-case.html  ~$Camera Trade Studies.xlsx
Project/: WishList.md
Project/ROS/src/rqt_sj/: package.xml
Project/ROS/src/rqt_sj/msg/: GaitComm.msg
Project/ROS/src/rqt_sj/resource/: rqt_sj.ui
Project/ROS/src/rqt_sj/src/rqt_sj/: rqt_sj_widget.py
ROS/src/rqt_sj/: CMakeLists.txt  plugin.xml  setup.py
ROS/src/rqt_sj/resource/: rqt_sj.ui  spacejockey.urdf
ROS/src/rqt_sj/scripts/: rqt_sj
ROS/src/rqt_sj/src/rqt_sj/: rqt_sj.py
ROS/src/spacejockey/: CMakeLists.txt  package.xml  setup.py
ROS/src/spacejockey/config/: arduino.yaml  flaws.yaml  general.yaml  gui.yaml  joints.yaml  jsp_options.yaml  planner.yaml  tf_env.yaml
ROS/src/spacejockey/launch/: ar_tags.launch  core.launch  cv_test.launch  ik_test.launch  ipython.launch  planner.launch  spacejockey-debug.launch  spacejockey.launch  test_config.launch
ROS/src/spacejockey/msg/: MajorPlanAction.msg  MinorPlanAction.msg  PlannerAction.msg  Waypoint.msg
ROS/src/spacejockey/nodes/: control_bridge.py  flaw_detect.py  flaw_detect_independent.py  gui.py  ik_test.py  localization.py  major_planner.py  minor_planner.py  planner_broadcaster.py  robot_pose_pub.py  sj_gui.py  static_tf_keepalive.py  waypoint_planner.py  world_warp.py  world_warp_dirty.py
ROS/src/spacejockey/resources/: ik_test.rviz  spacejockey.rviz  spacejockey.urdf
ROS/src/spacejockey/resources/meshes/: CenterJointB.dae
ROS/src/spacejockey/scripts/: ipython_shell.py  sj_kinematics.py  waypoint_planner.py
ROS/src/spacejockey/src/: __init__.py
ROS/src/spacejockey/src/spacejockey/: __init__.py  geometry.py  kinematics.py  std_redirect.py  tf_cache.py
ROS/src/spacejockey/srv/: AddWaypoints.srv  MajorPlanner.srv  RobotStatus.srv
ROS/src/tf/: .tar
(+375 files in other folders)
