<?xml version="1.0"?>
<package>
  <name>spacejockey</name>
  <version>0.0.1</version>
  <description>The Space Jockey Control System Package</description>
  <maintainer email="nate@nathanielchapman.com">Nate Chapman</maintainer>
  <maintainer email="brianboyle.it@gmail.com">Brian Boyle</maintainer>
  <license>MRSD Students are badasses, don't fuck with our IP</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>